Fix sticky footer
Still not sure why the footer was displaying too low for app manager pages but fine for other B3 pages (e.g., exports) but removing the padding seems to fix app manager without hurting exports.

--- a/corehq/apps/style/static/style/less/bootstrap3/layouts.less
+++ b/corehq/apps/style/static/style/less/bootstrap3/layouts.less
@@ -8,5 +8,4 @@ body, html {
     min-height: 100%;
     height: auto !important;
     margin-bottom: -@navbar-height;
-    padding-bottom: @navbar-height;
 }
